--- a/index.html
+++ b/index.html
@@ -2,12 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Weather App</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/app.js"></script>
+  <body class="bg-neutral-100 tracking-wider text-sm">
+    <div id="app" class="h-screen flex flex-col items-center justify-center">
+      <div class="w-[min(100%,25rem)] flex flex-col gap-3 bg-neutral-200 p-6">
+        <h1 class="text-2xl text-neutral-500">Weather</h1>
+
+        <form id="form" class="flex">
+          <input
+            type="text"
+            name="city"
+            placeholder="City"
+            class="p-3 w-full"
+          />
+          <button type="submit" class="px-4 py-2 bg-blue-600">OK</button>
+        </form>
+
+        <div id="card" class="bg-white">
+          <img src="https://placehold.co/400x300" alt="" />
+          <div
+            id="details"
+            class="uppercase text-center text-neutral-500 [&>*+*]:mt-2 p-2"
+          >
+            <h5>City</h5>
+            <div>Weather</div>
+            <div class="text-xl">
+              <span>temp</span>
+              <span>&deg;C</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="/src/app.js"></script>
   </body>
 </html>
