--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
       </div>
     </div>
+    <script src="/src/forecast.js"></script>
     <script src="/src/app.js"></script>
   </body>
 </html>
