--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           >
             <h5>City</h5>
             <div>Weather</div>
-            <div class="text-xl">
+            <div class="text-2xl">
               <span>temp</span>
               <span>&deg;C</span>
             </div>
